Fixed issue with chevron alignment in left pane and alignment of ellipsis on the sliding bar

--- a/src/styles/components/_checkbox-tree.scss
+++ b/src/styles/components/_checkbox-tree.scss
@@ -6,6 +6,10 @@
   flex-shrink: 0;
 }
 
+.rct-collapse {
+  align-self: initial;
+}
+
 .rct-icon-expand-close,
 .rct-icon-expand-open {
   padding-top: 6px;
